fixed spacing in documents

--- a/Ryaan's Website/style.css
+++ b/Ryaan's Website/style.css
@@ -91,7 +91,7 @@ li a:hover:not(.active) {
 .paragraphText {
   font-family: "Ubuntu", sans-serif;
   color: whitesmoke;
-  font-size: 19px;
+  font-size: 18.5px;
 }
 
 .nameText {
